--- a/css/responsive.css
+++ b/css/responsive.css
@@ -38,7 +38,7 @@
     /*  Content Dashboard
     /*------------------------------------------*/ 
     .content-dashboard .dash-left {
-        margin-left: -500px;
+        /*margin-left: -500px;*/
     }
 
     /*------------------------------------------*/
